add modal fns and styles

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <thead>
             <tr>
               <th class="pb-2 px-4 text-center whitespace-nowrap">Nombre cliente</th>
+              <th class="pb-2 px-4 text-center">Correo</th>
               <th class="pb-2 px-4 text-center">Teléfono</th>
               <th class="pb-2 px-4 text-center">Empresa</th>
               <th class="pb-2 px-4 text-center">Acciones</th>
@@ -47,6 +48,7 @@
           <tbody>
             <tr>
               <td class="pb-2 px-4 text-center whitespace-nowrap">John Wick</td>
+              <td class="pb-2 px-4 text-center whitespace-nowrap">correo@correo.com</td>
               <td class="pb-2 px-4 text-center whitespace-nowrap">123456789</td>
               <td class="pb-2 px-4 text-center whitespace-nowrap">The Continental</td>
               <td class="pb-2 px-4 text-center whitespace-nowrap">
